--- a/public/index.html
+++ b/public/index.html
@@ -3,78 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control de Ambiente</title>
+    <title>Estructura de Base de Datos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #f5f5f5;
         }
-        .container {
-            border: 1px solid #ccc;
+        .table-container {
+            background-color: white;
+            border-radius: 8px;
             padding: 20px;
-            border-radius: 5px;
-        }
-        .form-group {
             margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        .stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        .stat-card {
-            background: #f5f5f5;
-            padding: 15px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .stat-card h4 {
-            margin: 0;
+        h2 {
             color: #333;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
         }
-        .stat-card p {
-            margin: 10px 0 0;
-            font-size: 24px;
-            color: #0066cc;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
         }
-        .connections-list {
-            margin-top: 20px;
-            padding: 15px;
-            background: #f9f9f9;
-            border-radius: 5px;
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #eee;
+        }
+        th {
+            background-color: #f8f9fa;
+            font-weight: bold;
+        }
+        tr:hover {
+            background-color: #f8f9fa;
+        }
+        .error {
+            color: red;
+            padding: 20px;
+            text-align: center;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Control de Ambiente</h2>
-        
-        <div id="statsContainer" class="stats">
-            <!-- Estadísticas se cargarán aquí -->
-        </div>
-
-        <div class="form-group">
-            <input type="text" id="newItem" placeholder="Nuevo item">
-            <button onclick="addItemToAmbiente(document.getElementById('newItem').value)">
-                Agregar Item
-            </button>
-            <button onclick="resetAmbiente()" style="margin-left: 10px; background-color: #ff4444; color: white;">
-                Reset Ambiente
-            </button>
-        </div>
-
-        <div id="status">
-            Cargando...
-        </div>
-
-        <div id="connections" class="connections-list">
-            <!-- Lista de conexiones se cargará aquí -->
-        </div>
+    <h1>Estructura de Base de Datos</h1>
+    <div id="content">
+        <p>Cargando información de las tablas...</p>
     </div>
 
-    <script src="/apiRequests.js"></script>
+    <script>
+        async function loadTables() {
+            try {
+                const response = await fetch('/tables-info');
+                const data = await response.json();
+
+                if (data.error) {
+                    document.getElementById('content').innerHTML = `
+                        <div class="error">
+                            <h3>Error</h3>
+                            <p>${data.error}</p>
+                        </div>
+                    `;
+                    return;
+                }
+
+                let html = '';
+                for (const [tableName, columns] of Object.entries(data)) {
+                    html += `
+                        <div class="table-container">
+                            <h2>Tabla: ${tableName}</h2>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Columna</th>
+                                        <th>Tipo</th>
+                                        <th>Nullable</th>
+                                        <th>Key</th>
+                                        <th>Extra</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                    `;
+
+                    columns.forEach(column => {
+                        html += `
+                            <tr>
+                                <td>${column.name}</td>
+                                <td>${column.type}</td>
+                                <td>${column.nullable}</td>
+                                <td>${column.key || '-'}</td>
+                                <td>${column.extra || '-'}</td>
+                            </tr>
+                        `;
+                    });
+
+                    html += `
+                                </tbody>
+                            </table>
+                        </div>
+                    `;
+                }
+
+                document.getElementById('content').innerHTML = html;
+            } catch (error) {
+                document.getElementById('content').innerHTML = `
+                    <div class="error">
+                        <h3>Error</h3>
+                        <p>Error al cargar la información de las tablas</p>
+                    </div>
+                `;
+            }
+        }
+
+        // Cargar las tablas cuando la página se carga
+        document.addEventListener('DOMContentLoaded', loadTables);
+    </script>
 </body>
 </html>
