--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
+        .buttons {
+            margin-bottom: 20px;
+        }
         .setup-button {
             background-color: #4CAF50;
             color: white;
@@ -74,20 +77,39 @@
         .refresh-button:hover {
             background-color: #1976D2;
         }
-        .buttons {
-            margin-bottom: 20px;
-        }
-        .numeros-list {
-            max-height: 100px;
-            overflow-y: auto;
-            word-wrap: break-word;
-        }
         .auto-refresh {
             margin-left: 20px;
             display: inline-flex;
             align-items: center;
             gap: 8px;
         }
+        /* Nuevos estilos para los números */
+        .numeros-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+            max-height: 150px;
+            overflow-y: auto;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-radius: 4px;
+        }
+        .numero {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: bold;
+        }
+        /* Colores pastel para los números */
+        .numero:nth-child(5n+1) { background-color: #FFB3BA; } /* Rosa pastel */
+        .numero:nth-child(5n+2) { background-color: #BAFFC9; } /* Verde pastel */
+        .numero:nth-child(5n+3) { background-color: #BAE1FF; } /* Azul pastel */
+        .numero:nth-child(5n+4) { background-color: #FFFFBA; } /* Amarillo pastel */
+        .numero:nth-child(5n+5) { background-color: #E8BAFF; } /* Púrpura pastel */
     </style>
 </head>
 <body>
@@ -96,10 +118,10 @@
     <div class="buttons">
         <button onclick="setupDatabase()" class="setup-button">Configurar Base de Datos</button>
         <button onclick="loadData()" class="refresh-button">Actualizar Datos</button>
-        <label class="auto-refresh">
+        <!-- <label class="auto-refresh">
             <input type="checkbox" id="autoRefresh" onchange="toggleAutoRefresh()">
             Auto-actualizar (5s)
-        </label>
+        </label> -->
     </div>
 
     <div class="table-container">
@@ -115,14 +137,20 @@
     <script>
         let autoRefreshInterval;
 
-        function toggleAutoRefresh() {
-            const checkbox = document.getElementById('autoRefresh');
-            if (checkbox.checked) {
-                loadData();
-                autoRefreshInterval = setInterval(loadData, 5000);
-            } else {
-                clearInterval(autoRefreshInterval);
-            }
+        // function toggleAutoRefresh() {
+        //     const checkbox = document.getElementById('autoRefresh');
+        //     if (checkbox.checked) {
+        //         loadData();
+        //         autoRefreshInterval = setInterval(loadData, 5000);
+        //     } else {
+        //         clearInterval(autoRefreshInterval);
+        //     }
+        // }
+
+        function formatearNumeros(numerosStr) {
+            if (!numerosStr) return '';
+            const numeros = numerosStr.split(',');
+            return numeros.map(n => `<div class="numero">${n}</div>`).join('');
         }
 
         async function setupDatabase() {
@@ -203,7 +231,11 @@
                                     <tr>
                                         <td>${bingo.id}</td>
                                         <td>${bingo.evento}</td>
-                                        <td class="numeros-list">${bingo.numeros}</td>
+                                        <td>
+                                            <div class="numeros-container">
+                                                ${formatearNumeros(bingo.numeros)}
+                                            </div>
+                                        </td>
                                         <td>${new Date(bingo.created_at).toLocaleString()}</td>
                                     </tr>
                                 `).join('')}
